<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
            <variable
                name="forgotObject"
                type="com.elifgulay.cookbook.ui.fragment.userFragments.ForgotFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.userFragments.ForgotFragment">

        <TextView
            android:id="@+id/textView28"
            style="@style/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/reset_password"
            app:layout_constraintBottom_toTopOf="@+id/textView29"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:ems="20"
            android:text="@string/reset_password_sub"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
            app:layout_constraintStart_toStartOf="@+id/textView28" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/customTextInput"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgotEmailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/regularButtonStyle_01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:onClick="@{()->forgotObject.sendEmail(forgotEmailTxt.getText().toString(),textInputLayout4)}"
            android:text="@string/forgotBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>